--- a/index.html
+++ b/index.html
@@ -26,13 +26,35 @@
     </ul>
 
     <!-- orderd list -->
-<h3>trip place</h3>
+    <h3>trip place</h3>
     <ol>
         <li>kerala</li>
         <li>ooty</li>
         <li>kodaikanal</li>
         <li>kanniyakumari</li>
     </ol>
+
+    <!-- image tags -->
+
+    <h1>pictures</h1>
+    <p>
+        <img src="https://www.shutterstock.com/shutterstock/photos/1911703984/display_1500/stock-photo-blue-naped-parrot-tanygnathus-lucionensis-colorful-parrot-native-to-philippines-green-parrot-1911703984.jpg"
+            alt="image" width="333" height="250">
+        <img src="https://www.shutterstock.com/shutterstock/photos/1425382592/display_1500/stock-photo-green-alexandrine-parakeet-living-in-asian-region-close-up-1425382592.jpg"
+            alt="image" width="333" height="250">
+        <img src="https://www.shutterstock.com/shutterstock/photos/735079171/display_1500/stock-photo-green-ringneck-parakeet-735079171.jpg"
+            alt="image" width="333" height="250">
+        <img src="https://www.shutterstock.com/shutterstock/photos/1222792825/display_1500/stock-photo-indian-forest-parrot-1222792825.jpg"
+            alt="image" width="333" height="250">
+    </p>
+
+    <!-- video element -->
+    
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/TLn3e_avfP8?si=JVjdaveujHs52MRp"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    
 </body>
 
 </html>
