--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML & CSS Practice</title>
 </head>
 
 <body>
@@ -54,7 +54,74 @@
             title="YouTube video player" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+            <!-- HTML TABLES-->
+
+            <table width="100%" border="2" bordercolor="cyan" cellspacing="2" cellpadding="2">
+                <tr>
+                    <td>sport</td>
+                    <td>Response</td>
+                </tr>
+                <tr>
+                    <td>BAseball</td>
+                    <td>28</td>
+                </tr>
+                <tr>
+                    <td>footballball</td>
+                    <td>28</td>
+                </tr>
+                <tr>
+                    <td>cricket</td>
+                    <td>28</td>
+                </tr>
+                <tr>
+                    <td>bedminton</td>
+                    <td>28</td>
+                </tr>
+            </table>
+
     
+            <!-- HTML FORMS -->
+             <form name="employement" action="send.php" method="post">
+                <table width="600" border="1" cellspacing="2" cellpadding="2"></table>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td></td>
+                </tr>
+                </table>
+             </form>
 </body>
 
 </html>
